<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fourth_cardview_bg"
        android:padding="10dp">

        <TextView
            android:id="@+id/spent_this_week_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/spent_weekly_label"
            android:textColor="#CAC8C8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weekly_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/amount_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/nunito"
            app:layout_constraintStart_toStartOf="@+id/spent_this_week_label"
            app:layout_constraintTop_toBottomOf="@+id/spent_this_week_label" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_rate"
            android:fontFamily="@font/nunito"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_general"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            tools:layout_editor_absoluteX="7dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BILLS AND SERVICES"
            android:textSize="16sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            tools:layout_editor_absoluteX="7dp" />

        <Button
            android:id="@+id/spendButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:text="@string/my_spend_label"
            android:textSize="12sp"
            android:fontFamily="@font/nunito"
            android:background="#50000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mpesaloading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/bills" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>