<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHome">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <io.getstream.avatarview.AvatarView
                android:id="@+id/profile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:avatarViewBorderWidth="2dp"
                app:avatarViewIndicatorColor="@color/green"
                app:avatarViewIndicatorEnabled="true"
                app:avatarViewIndicatorPosition="bottomRight"
                app:avatarViewInitialsTextStyle="bold"
                app:avatarViewShape="circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notificationsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/notifications_icon_desc"
                app:layout_constraintEnd_toStartOf="@+id/qrcodeicon"
                app:layout_constraintTop_toTopOf="@+id/profile"
                app:srcCompat="@drawable/notificationsicon" />

            <ImageView
                android:id="@+id/qrcodeicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qrcodeicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile" />

            <TextView
                android:id="@+id/balanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/myToolbar"
                app:layout_constraintStart_toStartOf="@+id/myToolbar"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <TextView
                android:id="@+id/balanceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:letterSpacing="0.1"
                android:text="@string/balance_amount"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/myToolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceLabel" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceAmount">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sendrequest"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/sendandrequesticon"
                    app:civ_circle_background_color="@color/green" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pay"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/payicon"
                    app:civ_circle_background_color="@color/blue" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/withdraw"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/withdraw"
                    app:civ_circle_background_color="@color/red" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/airtime"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/airtimephoneicon"
                    app:civ_circle_background_color="@color/light" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>